HAHA We got UDK gitified

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,28 @@
 *~
 Thumbs.db
 __MAC_OSX
+
+UDK-2011-08/Binaries/
+UDK-2011-08/Engine/
+UDK-2011-08/Development/Flash/
+!UDK-2011-08/Development/Src/*
+UDK-2011-08/UDKGame/Autosaves/
+UDK-2011-08/UDKGame/Build/
+UDK-2011-08/UDKGame/Flash/
+UDK-2011-08/UDKGame/Localization/
+UDK-2011-08/UDKGame/Logs/
+UDK-2011-08/UDKGame/Movies/
+UDK-2011-08/UDKGame/Script/
+UDK-2011-08/UDKGame/Splash/
+UDK-2011-08/UDKGame/*.txt
+!UDK-2011-08/UDKGame/Config/*
+UDK-2011-08/UDKGame/Content/Maps/
+UDK-2011-08/UDKGame/Content/Mobile/
+UDK-2011-08/UDKGame/Content/Shared/
+UDK-2011-08/UDKGame/Content/Showcases/
+UDK-2011-08/UDKGame/Content/TestPackages/
+UDK-2011-08/UDKGame/Content/UT3/
+UDK-2011-08/UDKGame/Content/*.upk
+UDK-2011-08/UDKGame/Content/*.bin
+UDK-2011-08/UDKGame/Content/GameAssetDatabase.*
+!UDK-2011-08/UDKGame/Content/Nomon/*
