--- a/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
@@ -37,8 +37,8 @@ DlgActorSearch=379,261,881,507
 DlgActorFactory=783,544,553,311,0
 DlgBuildProgress=760,475,406,200
 SurfaceProperties=647,11,545,757
-DockingContainer=2514,0,772,1080
-FloatingFrame_DockingContainer=2514,0,772,1080
+DockingContainer=2207,0,1079,1080
+FloatingFrame_DockingContainer=2207,0,1079,1080
 DlgGBSearch=953,568,400,300,0
 DlgSoundNodeWaveOptions=496,238,664,324,0
 DlgMove=760,475,497,408,0
@@ -105,11 +105,9 @@ MatineeMinimized=False
 Matinee=2169,-45,885,800
 AnimSetViewerMaximized=False
 AnimSetViewerMinimized=False
-<<<<<<< HEAD
 AnimSetViewer=1375,127,1405,780
-=======
+None=======
 AnimSetViewer=1979,261,1200,780
->>>>>>> d7c920eec72abc163eeb2b621dfd6197743cb7d2
 LightmassOptionsObjectFloatingPropertyWindowMaximized=False
 LightmassOptionsObjectFloatingPropertyWindowMinimized=False
 LightmassOptionsObjectFloatingPropertyWindow=209,52,350,500
@@ -129,13 +127,11 @@ AnimTreeEditor=1451,145,1024,768
 [EditorFrame]
 FrameClassName=WxEditorFrame
 LocalizationFile=UnrealEd
-<<<<<<< HEAD
 FramePos.x=69
 FramePos.y=69
-=======
-FramePos.x=2062
-FramePos.y=233
->>>>>>> d7c920eec72abc163eeb2b621dfd6197743cb7d2
+None=======
+FramePos.x=749
+FramePos.y=123
 FrameSize.x=1295
 FrameSize.y=766
 FrameMaximized=0
@@ -148,11 +144,9 @@ UseScriptDefinedOrder=True
 
 [StartupTipDialog]
 ShowAtStartup=True
-<<<<<<< HEAD
 CurrentTip=38
-=======
-CurrentTip=24
->>>>>>> d7c920eec72abc163eeb2b621dfd6197743cb7d2
+None=======
+CurrentTip=30
 
 [UnrealEd.MaterialEditorOptions]
 bShowGrid=True
@@ -225,7 +219,7 @@ AutoAddNewFiles=True
 UNR=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels
 Brush=..\..\UDKGame\Content\
 2DS=..\..\UDKGame\Content\
-PSA=C:\Users\Tom\Downloads
+PSA=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\Characters
 COLLADAAnim=..\..\UDKGame\Content\
 GenericImport=..\..\UDKGame\Content\
 GenericExport=..\..\UDKGame\Content\
@@ -267,23 +261,27 @@ Noisy5_Strength=100
 Noisy5_Radius=128
 Noisy5_Falloff=256
 Current_Tool=2
-Current_Brush=0
+Current_Brush=-1
 Current_Strength=100
-Current_Radius=64
-Current_Falloff=128
+Current_Radius=196
+Current_Falloff=140
 SliderRange_Low_Strength=0
 SliderRange_High_Strength=100
 SliderRange_Low_Radius=0
 SliderRange_High_Radius=2048
 SliderRange_High_Falloff=2048
 bShowDecoarationMeshes=true
-TerrainLayerBrowser_BackgroundColor=(R=162,G=162,B=162)
-TerrainLayerBrowser_BackgroundColor2=(R=192,G=192,B=192)
-TerrainLayerBrowser_BackgroundColor3=(R=212,G=212,B=212)
-TerrainLayerBrowser_SelectedColor=(R=162,G=162,B=0)
-TerrainLayerBrowser_SelectedColor2=(R=192,G=192,B=0)
-TerrainLayerBrowser_SelectedColor3=(R=212,G=212,B=0)
-TerrainLayerBrowser_BorderColor=(R=64,G=64,B=64)
+TerrainLayerBrowser_BackgroundColor=(B=162,G=162,R=162,A=0)
+TerrainLayerBrowser_BackgroundColor2=(B=192,G=192,R=192,A=0)
+TerrainLayerBrowser_BackgroundColor3=(B=212,G=212,R=212,A=0)
+TerrainLayerBrowser_SelectedColor=(B=0,G=162,R=162,A=0)
+TerrainLayerBrowser_SelectedColor2=(B=0,G=192,R=192,A=0)
+TerrainLayerBrowser_SelectedColor3=(B=0,G=212,R=212,A=0)
+TerrainLayerBrowser_BorderColor=(B=64,G=64,R=64,A=0)
+bSoftSelectEnabled=False
+bConstrainedEditing=False
+Current_MirrorFlag=0
+SliderRange_Low_Falloff=0
 
 [UnrealEd.PhATSimOptions]
 SkyBrightness=0.25
@@ -420,7 +418,7 @@ NextType=0
 
 [IniVersion]
 0=1310480206.000000
-1=1321398508.000000
+1=1300710129.000000
 
 [GameAssetDatabase]
 JournalAlarmTime=11/20/2011 12:04:51 PM
@@ -437,11 +435,7 @@ DefaultEditor_ShowFlagsBinaryString2=0000000000000000010000000010101010000010110
 Template=0
 MaximizedViewport=-1
 CustomFOV=90
-<<<<<<< HEAD
-Splitter0=331
-=======
 Splitter0=295
->>>>>>> d7c920eec72abc163eeb2b621dfd6197743cb7d2
 Splitter1=603
 Splitter2=603
 Viewport0_Enabled=True
@@ -494,11 +488,9 @@ StartPage_Docked=True
 StartPage_Visible=True
 
 [UnrealEd]
-<<<<<<< HEAD
 RecentAssets="             NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.Nomon_Golem_Large NomonAvatar.GolemAnims "
-=======
-RecentAssets="            NomonAvatar.Nomon_Golem_Large NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.GolemAnims "
->>>>>>> d7c920eec72abc163eeb2b621dfd6197743cb7d2
+None=======
+RecentAssets="            NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.GolemAnims NomonAvatar.Nomon_Golem_Large "
 
 [ReferencedAssets]
 SplitterPos=200
@@ -577,11 +569,9 @@ FilterPanelSearchString=
 LeftPanelWidth=266.000000
 IsLeftPanelCollapsed=False
 ExpandedPackages=/Engine;/UDKGame;/UDKGame/Content;/UDKGame/Content/Nomon;/UDKGame/Content/Nomon/Assets;/UDKGame/Content/Nomon/Characters;/UDKGame/Content/Nomon/NomonLevels;/UDKGame/Content/Nomon/NomonLevels/NOM-LevelTest;
-<<<<<<< HEAD
 LeftSubpanelsState=mSharedCollectionsSizer:False:435.079158895918|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:363.720841104082|
-=======
-LeftSubpanelsState=mSharedCollectionsSizer:False:511.71586692587|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:407.08413307413|
->>>>>>> d7c920eec72abc163eeb2b621dfd6197743cb7d2
+None=======
+LeftSubpanelsState=mSharedCollectionsSizer:False:511.71586692587|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:287.08413307413|
 SelectedSharedCollection=UDK Cool Materials
 IsUsingFlatPackageList=False
 AssetViewLayoutAsDouble=3.000000
