--- a/UDK-2011-08/UDKGame/Config/UDKEngine.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKEngine.ini
@@ -1275,12 +1275,20 @@ StatsKeyMappings=(ViewId=1,PropertyId=0x10000142,KeyId=265)
 
 [IniVersion]
 0=1313088004.000000
-1=1321398508.000000
-2=1321398508.000000
+1=1307714765.000000
+2=1321202998.000000
 
 [HardwareSurvey]
 LastSurveyVersion=8788
 LastSurveyDate=20111116
 SurveysFailed=0
-SurveysAttempted=3
+SurveysAttempted=1
+
+[WinDrv.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
 
