--- a/UDK-2011-08/UDKGame/Config/UDKGame.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKGame.ini
@@ -1,6 +1,6 @@
 [Engine.GameInfo]
-DefaultGame=Nomon.NomonGameInfo
-DefaultServerGame=Nomon.NomonGameInfo
+DefaultGame=UDKBase.SimpleGame
+DefaultServerGame=UDKBase.SimpleGame
 bAdminCanPause=false
 MaxPlayers=32
 GameDifficulty=1.000000
@@ -13,7 +13,7 @@ MinTimeMargin=-1.000000
 TotalNetBandwidth=32000
 MaxDynamicBandwidth=7000
 MinDynamicBandwidth=4000
-PlayerControllerClassName=Nomon.NomonPlayerController
+PlayerControllerClassName=UDKBase.SimplePC
 DefaultGameType=UTGame.UTDeathmatch
 DefaultMapPrefixes=(Prefix="DM",bUsesCommonPackage=FALSE,GameType="UTGame.UTDeathmatch")
 DefaultMapPrefixes=(Prefix="CTF",bUsesCommonPackage=FALSE,GameType="UTGameContent.UTCTFGame_Content")
@@ -414,27 +414,6 @@ bLogGameplayEvents=false
 bForceRespawn=False
 ServerSkillLevel=0
 MapCycleIndex=-1
-bWarmupRound=False
-bForceMidGameMenuAtStart=False
-WarmupTime=0
-ResetTimeDelay=0
-GameplayEventsWriterClassName=
-RequiredMobileInputConfigs=(GroupName="UberGroup",RequireZoneNames=("UberStickMoveZone","UberStickLookZone","UberLookZone"),bIsAttractModeGroup=False)
-RequiredMobileInputConfigs=(GroupName="InitialFlybyGroup",RequireZoneNames=,bIsAttractModeGroup=False)
-bIsStandbyCheckingEnabled=False
-MaxLives=0
-StandbyRxCheatTime=0.000000
-StandbyTxCheatTime=0.000000
-BadPingThreshold=0
-PercentMissingForRxStandby=0.000000
-PercentMissingForTxStandby=0.000000
-PercentForBadPing=0.000000
-JoinInProgressStandbyWaitTime=0.000000
-DefaultGameType=UTGame.UTDeathmatch
-DefaultMapPrefixes=(Prefix="DM",bUsesCommonPackage=False,GameType="UTGame.UTDeathmatch",AdditionalGameTypes=,ForcedObjects=)
-DefaultMapPrefixes=(Prefix="CTF",bUsesCommonPackage=False,GameType="UTGameContent.UTCTFGame_Content",AdditionalGameTypes=,ForcedObjects=)
-DefaultMapPrefixes=(Prefix="VCTF",bUsesCommonPackage=False,GameType="UTGameContent.UTVehicleCTFGame_Content",AdditionalGameTypes=,ForcedObjects=)
-AnimTreePoolSize=0
 
 [UTGame.UTTeamGame]
 GoalScore=60
@@ -1076,8 +1055,8 @@ MenuInputMapArray=(FieldName="AnyKey",Set="PS3",MappedText="<Strings:UDKGameUI.B
 
 [IniVersion]
 0=1312376615.000000
-1=1321398508.000000
-2=1321399226.000000
+1=1311620354.000000
+2=1312376614.000000
 
 [Nomon.NomonGameInfo]
 bWarmupRound=False
@@ -1111,6 +1090,6 @@ AnimTreePoolSize=0
 [DebugWindows]
 ConsoleWidth=160
 ConsoleHeight=4000
-ConsoleX=145
-ConsoleY=162
+ConsoleX=194
+ConsoleY=125
 
