added level transitions

--- a/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
@@ -94,7 +94,7 @@ DlgStaticMeshLightingInfo2Minimized=False
 DlgStaticMeshLightingInfo2=69,259,1297,500
 Kismet_PosSizeMaximized=False
 Kismet_PosSizeMinimized=False
-Kismet_PosSize=0,0,1040,768
+Kismet_PosSize=68,0,1040,768
 ActorFloatingPropertyWindowMaximized=False
 ActorFloatingPropertyWindowMinimized=False
 ActorFloatingPropertyWindow=47,27,899,665
@@ -155,7 +155,7 @@ UseScriptDefinedOrder=True
 ShowAtStartup=True
 CurrentTip=38
 None=======
-CurrentTip=34
+CurrentTip=35
 
 [UnrealEd.MaterialEditorOptions]
 bShowGrid=True
@@ -499,7 +499,7 @@ StartPage_Visible=True
 [UnrealEd]
 RecentAssets="             NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.Nomon_Golem_Large NomonAvatar.GolemAnims "
 None=======
-RecentAssets="               NomonAssets.FloorMat NomonAssets.Black NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.GolemAnims NomonAvatar.Nomon_Golem_Large "
+RecentAssets="               NomonAvatar.Nomon_Golem_Large NomonAvatar.GolemAnims A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue NOM-LevelTest.Nomon_Golem NOM-LevelOne.WhiteMat Nomon.Mesh.Nomon_Golem NomonAvatar.Nomon_Golem NomonAvatar.Nomon_Golem_AnimTree NomonAssets.Black NomonAssets.FloorMat "
 
 [ReferencedAssets]
 SplitterPos=200
@@ -580,6 +580,16 @@ TextureRenderTarget2DSplitterPosProportionFavorites=0.289017
 TextureRenderTarget2DSplitterPosProportion=0.500000
 CubeBuilderSplitterPosProportionFavorites=0.344828
 CubeBuilderSplitterPosProportion=0.500000
+SeqEvent_NOMGameWonSplitterPosProportion=0.500000
+SeqEvent_NOMGameWonSplitterPosProportionFavorites=0.500000
+SeqAct_PrepareMapChangeSplitterPosProportion=0.500000
+SeqAct_PrepareMapChangeSplitterPosProportionFavorites=0.500000
+SeqAct_ConsoleCommandSplitterPosProportion=0.500000
+SeqAct_ConsoleCommandSplitterPosProportionFavorites=0.500000
+SequenceObjectSplitterPosProportion=0.500000
+SequenceObjectSplitterPosProportionFavorites=0.500000
+SeqAct_ActorFactorySplitterPosProportion=0.500000
+SeqAct_ActorFactorySplitterPosProportionFavorites=0.500000
 
 [ContentBrowserUIState]
 FilterPanelHeight=200.000000
@@ -650,10 +660,10 @@ bFilterBSP=True
 bFilterTerrain=True
 
 [MRU]
-MRUItem0=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelOne.udk
-MRUItem1=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelTest.udk
-MRUItem2=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelTwo.udk
-MRUItem3=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelThree.udk
+MRUItem0=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelThree.udk
+MRUItem1=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelTwo.udk
+MRUItem2=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelOne.udk
+MRUItem3=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelTest.udk
 MRUItem4=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\Levels\NOM-LevelTest.udk
 MRUItem5=C:\UDK\UDK-2011-08\UDKGame\Content\Maps\UT3\VCTF-Necropolis.udk
 
@@ -665,28 +675,28 @@ MaterialEditor=1
 AnimTreeEditor=1
 
 [PropertyWindowExpansion]
-SeqEvent_Touch=
-SequenceEvent=
-SequenceOp=
-SequenceObject=
-Object=
+SeqEvent_Touch=Object.SequenceObject 
+SequenceEvent=Object.SequenceObject 
+SequenceOp=Object.SequenceObject 
+SequenceObject=Object.SequenceObject 
+Object=Object.SequenceObject 
 SeqAct_ModifyHealth=
-SequenceAction=
-SeqVar_Player=Object.SeqVar_Player
-SeqVar_Object=
-SequenceVariable=
+SequenceAction=Object.SeqAct_ConsoleCommand.Commands Object.SequenceAction Object.SequenceObject 
+SeqVar_Player=Object.SeqVar_Player Object.SequenceObject 
+SeqVar_Object=Object.SeqVar_Player Object.SequenceObject 
+SequenceVariable=Object.SeqVar_Player Object.SequenceObject 
 SeqEvent_LevelLoaded=
-PlayerStart=Object.PlayerStart Object.NavigationPoint 
-NavigationPoint=Object.PlayerStart Object.NavigationPoint 
-SeqAct_Interp=
-SeqAct_Latent=
+PlayerStart=Object.PlayerStart Object.NavigationPoint
+NavigationPoint=Object.PlayerStart Object.NavigationPoint
+SeqAct_Interp=Object.SequenceAction Object.SequenceObject 
+SeqAct_Latent=Object.SequenceAction Object.SequenceObject 
 InterpGroup=
 SkeletalMesh=Object.SkeletalMesh.Origin
 InterpActor=Object.InterpActor Object.DynamicSMActor 
 DynamicSMActor=Object.InterpActor Object.DynamicSMActor 
-PointLightToggleable=Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent 
-PointLight=Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent 
-Light=Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent 
+PointLightToggleable=Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent
+PointLight=Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent.Function Object.Light.LightComponent.Object.LightShafts 
+Light=Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent.Function Object.Light.LightComponent.Object.LightShafts 
 PreviewMaterial=
 Material=
 MaterialInterface=
@@ -701,18 +711,18 @@ SkeletalMeshFactory=Object.None
 MaterialExpressionDestColor=
 MaterialExpressionDesaturation=
 MaterialExpressionVertexColor=
-AnimNodeBlendByPhysics=Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph 
-AnimNodeBlendList=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph 
-AnimNodeBlendBase=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph 
-AnimNode=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph 
-AnimObject=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph 
-UDKAnimBlendByFall=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph 
-UDKAnimBlendBase=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph 
+AnimNodeBlendByPhysics=Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
+AnimNodeBlendList=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
+AnimNodeBlendBase=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
+AnimNode=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
+AnimObject=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
+UDKAnimBlendByFall=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
+UDKAnimBlendBase=Object.UDKAnimBlendByFall Object.animation Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
 AnimNodeBlendDirectional=Object.AnimNodeBlendDirectional Object.AnimNodeBlendBase Object.Performance Object.Morph
 AnimSet=Object.AnimSet.UseTranslationBoneNames Object.AnimSet.ForceMeshTranslationBoneNames
 UTAnimNodeSequence=Object.UDKAnimNodeSequence Object.AnimNodeSequence Object.Group Object.Display Object.Camera Object.Performance Object.Morph
 UDKAnimNodeSequence=Object.UDKAnimNodeSequence Object.AnimNodeSequence Object.Group Object.Display Object.Camera Object.Performance Object.Morph
-AnimNodeSequence=Object.AnimNodeSequence Object.Group Object.Display Object.Camera Object.Performance Object.Morph 
+AnimNodeSequence=Object.AnimNodeSequence Object.Group Object.Display Object.Camera Object.Performance Object.Morph
 UDKAnimBlendByIdle=Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
 AnimSequence=Object.AnimSequence
 Brush=Object.Debug 
@@ -724,10 +734,15 @@ TextureRenderTarget=
 Texture=
 CubeBuilder=
 BrushBuilder=
-PostProcessVolume=Object.PostProcessVolume.Settings Object.Brush Object.Attachment Object.Physics Object.Debug 
+PostProcessVolume=Object.PostProcessVolume.Settings Object.Brush Object.Attachment Object.Physics Object.Debug
 Volume=Object.Debug 
 LightmassImportanceVolume=Object.Debug 
-PathNode=Object.NavigationPoint 
+PathNode=Object.NavigationPoint
+SeqEvent_NOMGameWon=
+SeqAct_PrepareMapChange=Object.SeqAct_PrepareMapChange Object.SequenceAction Object.SequenceObject 
+SeqAct_ConsoleCommand=Object.SeqAct_ConsoleCommand.Commands Object.SequenceAction Object.SequenceObject 
+SpotLight=Object.Light.LightComponent.Object.SpotLightComponent Object.Light.LightComponent.Object.LightShafts Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent 
+SeqAct_ActorFactory=Object.SequenceAction Object.SequenceObject 
 
 [AnimSetViewer]
 LightDir=P=-8192 Y=-8192 R=0
