--- a/UDK-2011-08/UDKGame/Config/UDKEngine.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKEngine.ini
@@ -917,7 +917,7 @@ bUseMaxQualityMode=False
 StaticDecals=True
 DynamicDecals=True
 UnbatchedDecals=True
-DecalCullDistanceScale=1.0
+DecalCullDistanceScale=1.000000
 DynamicLights=True
 DynamicShadows=True
 LightEnvironmentShadows=True
@@ -956,51 +956,51 @@ bAllowPostprocessMLAA=False
 SkeletalMeshLODBias=0
 ParticleLODBias=0
 DetailMode=2
-MaxDrawDistanceScale=1
+MaxDrawDistanceScale=1.000000
 ShadowFilterQualityBias=0
 MaxAnisotropy=4
 MaxMultiSamples=1
 bAllowD3D9MSAA=False
 bAllowTemporalAA=False
-TemporalAA_MinDepth=500
-TemporalAA_StartDepthVelocityScale=100
+TemporalAA_MinDepth=500.000000
+TemporalAA_StartDepthVelocityScale=100.000000
 MinShadowResolution=64
 MinPreShadowResolution=8
 MaxShadowResolution=1120
 MaxWholeSceneDominantShadowResolution=1344
 ShadowFadeResolution=128
 PreShadowFadeResolution=16
-ShadowFadeExponent=.25
+ShadowFadeExponent=0.250000
 ResX=1280
 ResY=720
 ScreenPercentage=100.000000
 SceneCaptureStreamingMultiplier=1.000000
-ShadowTexelsPerPixel=1.27324
-PreShadowResolutionFactor=.5
+ShadowTexelsPerPixel=1.273240
+PreShadowResolutionFactor=0.500000
 bEnableVSMShadows=False
 bEnableBranchingPCFShadows=False
 bAllowHardwareShadowFiltering=False
-TessellationAdaptivePixelsPerTriangle=48.0
+TessellationAdaptivePixelsPerTriangle=48.000000
 bEnableForegroundShadowsOnWorld=True
 bEnableForegroundSelfShadowing=False
 bAllowWholeSceneDominantShadows=True
 bUseConservativeShadowBounds=False
-ShadowFilterRadius=2
-ShadowDepthBias=.012
-PerObjectShadowTransition=60
-CSMSplitPenumbraScale=.5
-CSMSplitSoftTransitionDistanceScale=4
-CSMSplitDepthBiasScale=.5
-CSMMinimumFOV=40
-CSMFOVRoundFactor=4
-UnbuiltWholeSceneDynamicShadowRadius=20000
+ShadowFilterRadius=2.000000
+ShadowDepthBias=0.012000
+PerObjectShadowTransition=60.000000
+CSMSplitPenumbraScale=0.500000
+CSMSplitSoftTransitionDistanceScale=4.000000
+CSMSplitDepthBiasScale=0.500000
+CSMMinimumFOV=40.000000
+CSMFOVRoundFactor=4.000000
+UnbuiltWholeSceneDynamicShadowRadius=20000.000000
 UnbuiltNumWholeSceneDynamicShadowCascades=3
 WholeSceneShadowUnbuiltInteractionThreshold=50
 bAllowFracturedDamage=True
-NumFracturedPartsScale=1.0
-FractureDirectSpawnChanceScale=1.0
-FractureRadialSpawnChanceScale=1.0
-FractureCullDistanceScale=1.0
+NumFracturedPartsScale=1.000000
+FractureDirectSpawnChanceScale=1.000000
+FractureRadialSpawnChanceScale=1.000000
+FractureCullDistanceScale=1.000000
 bForceCPUAccessToGPUSkinVerts=false
 bDisableSkeletalInstanceWeights=false
 HighPrecisionGBuffers=False
@@ -1014,7 +1014,7 @@ MobileRimLighting=True
 MobileColorBlending=True
 MobileVertexMovement=True
 MobileOcclusionQueries=False
-MobileLODBias=-0.5
+MobileLODBias=-0.500000
 MobileBoneCount=75
 MobileBoneWeightCount=2
 MobileUsePreprocessedShaders=True
@@ -1028,40 +1028,41 @@ MobileSharePixelShaders=True
 MobileShareVertexShaders=True
 MobileShareShaderPrograms=True
 MobileEnableMSAA=False
-MobileContentScaleFactor=1.0
+MobileContentScaleFactor=1.000000
 MobileVertexScratchBufferSize=150
 MobileIndexScratchBufferSize=10
-ApexLODResourceBudget=1000000000000000000000.0
+ApexLODResourceBudget=1000000020040877300000.000000
 ApexDestructionMaxChunkIslandCount=2147483647
-ApexDestructionMaxChunkSeparationLOD=1.0
+ApexDestructionMaxChunkSeparationLOD=1.000000
 bEnableParallelAPEXClothingFetch=False
-TEXTUREGROUP_World=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_WorldNormalMap=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_WorldSpecular=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_Character=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_CharacterNormalMap=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_CharacterSpecular=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_Weapon=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_WeaponNormalMap=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_WeaponSpecular=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_Vehicle=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_VehicleNormalMap=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_VehicleSpecular=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_Cinematic=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_Effects=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=linear,MipFilter=point)
-TEXTUREGROUP_EffectsNotFiltered=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_Skybox=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_UI=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_Lightmap=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_Shadowmap=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point,NumStreamedMips=3)
-TEXTUREGROUP_RenderTarget=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_MobileFlattened=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_ProcBuilding_Face=(MinLODSize=1,MaxLODSize=1024,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_ProcBuilding_LightMap=(MinLODSize=1,MaxLODSize=256,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_Terrain_Heightmap=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_Terrain_Weightmap=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
+TEXTUREGROUP_World=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_WorldNormalMap=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_WorldSpecular=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_Character=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_CharacterNormalMap=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_CharacterSpecular=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_Weapon=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_WeaponNormalMap=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_WeaponSpecular=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_Vehicle=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_VehicleNormalMap=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_VehicleSpecular=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_Cinematic=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_Effects=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Linear,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_EffectsNotFiltered=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_Skybox=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_UI=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_Lightmap=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_Shadowmap=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,NumStreamedMips=3,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_RenderTarget=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_MobileFlattened=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_ProcBuilding_Face=(MinLODSize=1,MaxLODSize=1024,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_ProcBuilding_LightMap=(MinLODSize=1,MaxLODSize=256,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_Terrain_Heightmap=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_Terrain_Weightmap=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
 TEXTUREGROUP_ImageBasedReflection=(MinLODSize=256,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=linear,MipGenSettings=TMGS_Blur5)
-TEXTUREGROUP_Bokeh=(MinLODSize=1,MaxLODSize=256,LODBias=0,MinMagFilter=linear,MipFilter=linear)
+TEXTUREGROUP_Bokeh=(MinLODSize=1,MaxLODSize=256,LODBias=0,MinMagFilter=Linear,MipFilter=Linear,MipGenSettings=TMGS_SimpleAverage)
+TEXTUREGROUP_ColorLookupTable=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=Aniso,MipFilter=Point,MipGenSettings=TMGS_SimpleAverage)
 
 [SystemSettingsEditor]
 
@@ -1280,7 +1281,13 @@ StatsKeyMappings=(ViewId=1,PropertyId=0x10000142,KeyId=265)
 
 [HardwareSurvey]
 LastSurveyVersion=8788
-LastSurveyDate=20111116
+LastSurveyDate=20111117
 SurveysFailed=0
 SurveysAttempted=1
+
+[AppCompat]
+MeasuredCPUScore=313.247375
+CompatLevelComposite=4
+CompatLevelCPU=5
+CompatLevelGPU=4
 
