--- a/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
@@ -97,10 +97,10 @@ Kismet_PosSizeMinimized=False
 Kismet_PosSize=68,0,1040,768
 ActorFloatingPropertyWindowMaximized=False
 ActorFloatingPropertyWindowMinimized=False
-ActorFloatingPropertyWindow=47,27,899,665
+ActorFloatingPropertyWindow=189,44,899,665
 DlgGenericStringEntryMaximized=False
 DlgGenericStringEntryMinimized=False
-MatineeMaximized=False
+MatineeMaximized=True
 MatineeMinimized=False
 Matinee=2169,-45,885,800
 AnimSetViewerMaximized=True
@@ -132,6 +132,9 @@ DlgTextureProperties=1921,176,706,699
 DlgBrushBuilderMaximized=False
 DlgBrushBuilderMinimized=False
 DlgBrushBuilder=2070,378,356,333
+StaticMeshEditorMaximized=False
+StaticMeshEditorMinimized=False
+StaticMeshEditor=64,64,800,650
 
 [EditorFrame]
 FrameClassName=WxEditorFrame
@@ -409,6 +412,11 @@ bImportAnimations=False
 bResampleAnimations=False
 bImportRigidAnimation=False
 bCombineMeshes=False
+bOverrideTangents=False
+bUseT0AsRefPose=False
+bSplitNonMatchingTriangles=False
+bReplaceVertexColors=False
+bExplicitNormals=False
 
 [SoundSettings]
 ChirpSoundClasses=Dialog DialogMedium DialogLoud DialogDeafening
@@ -499,7 +507,7 @@ StartPage_Visible=True
 [UnrealEd]
 RecentAssets="             NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.Nomon_Golem_Large NomonAvatar.GolemAnims "
 None=======
-RecentAssets="               NomonAvatar.Nomon_Golem_Large NomonAvatar.GolemAnims A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue NOM-LevelTest.Nomon_Golem NOM-LevelOne.WhiteMat Nomon.Mesh.Nomon_Golem NomonAvatar.Nomon_Golem NomonAvatar.Nomon_Golem_AnimTree NomonAssets.Black NomonAssets.FloorMat "
+RecentAssets="                NomonAssets.Enemy NomonAssets.FloorMat NomonAssets.Black NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.GolemAnims NomonAvatar.Nomon_Golem_Large "
 
 [ReferencedAssets]
 SplitterPos=200
@@ -524,8 +532,8 @@ ActorSplitterPosProportion=0.500566
 ActorSplitterPosProportionFavorites=0.495991
 SeqAct_InterpSplitterPosProportion=0.500000
 SeqAct_InterpSplitterPosProportionFavorites=0.500000
-InterpGroupSplitterPosProportionFavorites=0.500583
-InterpGroupSplitterPosProportion=0.461361
+InterpGroupSplitterPosProportionFavorites=0.500389
+InterpGroupSplitterPosProportion=0.461004
 SkeletalMeshSplitterPosProportionFavorites=0.500000
 SkeletalMeshSplitterPosProportion=0.500000
 SeqVar_ObjectSplitterPosProportion=0.500000
@@ -590,6 +598,12 @@ SequenceObjectSplitterPosProportion=0.500000
 SequenceObjectSplitterPosProportionFavorites=0.500000
 SeqAct_ActorFactorySplitterPosProportion=0.500000
 SeqAct_ActorFactorySplitterPosProportionFavorites=0.500000
+FbxImportUISplitterPosProportionFavorites=0.286533
+FbxImportUISplitterPosProportion=0.501393
+StaticMeshSplitterPosProportion=0.500000
+StaticMeshSplitterPosProportionFavorites=0.344828
+InterpTrackMoveSplitterPosProportion=0.461004
+InterpTrackMoveSplitterPosProportionFavorites=0.466926
 
 [ContentBrowserUIState]
 FilterPanelHeight=200.000000
@@ -660,9 +674,9 @@ bFilterBSP=True
 bFilterTerrain=True
 
 [MRU]
-MRUItem0=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelThree.udk
-MRUItem1=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelOne.udk
-MRUItem2=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelTwo.udk
+MRUItem0=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelTwo.udk
+MRUItem1=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelThree.udk
+MRUItem2=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelOne.udk
 MRUItem3=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\NomonLevels\NOM-LevelTest.udk
 MRUItem4=C:\UDK\UDK-2011-08\UDKGame\Content\Nomon\Levels\NOM-LevelTest.udk
 MRUItem5=C:\UDK\UDK-2011-08\UDKGame\Content\Maps\UT3\VCTF-Necropolis.udk
@@ -673,27 +687,28 @@ Matinee=2
 AnimSetViewer=1
 MaterialEditor=1
 AnimTreeEditor=1
+StaticMeshEditor=2
 
 [PropertyWindowExpansion]
 SeqEvent_Touch=Object.SequenceObject 
 SequenceEvent=Object.SequenceObject 
-SequenceOp=Object.SequenceObject 
+SequenceOp=Object.SeqAct_Interp Object.SequenceAction Object.SequenceObject 
 SequenceObject=Object.SequenceObject 
 Object=Object.SequenceObject 
 SeqAct_ModifyHealth=
-SequenceAction=Object.SeqAct_ConsoleCommand.Commands Object.SequenceAction Object.SequenceObject 
+SequenceAction=Object.SeqAct_Interp Object.SequenceAction Object.SequenceObject 
 SeqVar_Player=Object.SeqVar_Player Object.SequenceObject 
-SeqVar_Object=Object.SeqVar_Player Object.SequenceObject 
-SequenceVariable=Object.SeqVar_Player Object.SequenceObject 
-SeqEvent_LevelLoaded=
+SeqVar_Object=Object.SequenceObject 
+SequenceVariable=Object.SequenceObject 
+SeqEvent_LevelLoaded=Object.SequenceObject 
 PlayerStart=Object.PlayerStart Object.NavigationPoint
 NavigationPoint=Object.PlayerStart Object.NavigationPoint
-SeqAct_Interp=Object.SequenceAction Object.SequenceObject 
-SeqAct_Latent=Object.SequenceAction Object.SequenceObject 
+SeqAct_Interp=Object.SeqAct_Interp Object.SequenceAction Object.SequenceObject 
+SeqAct_Latent=Object.SeqAct_Interp Object.SequenceAction Object.SequenceObject 
 InterpGroup=
 SkeletalMesh=Object.SkeletalMesh.Origin
-InterpActor=Object.InterpActor Object.DynamicSMActor 
-DynamicSMActor=Object.InterpActor Object.DynamicSMActor 
+InterpActor=Object.InterpActor Object.DynamicSMActor Object.Movement.Location 
+DynamicSMActor=Object.InterpActor Object.DynamicSMActor Object.Movement.Location 
 PointLightToggleable=Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent
 PointLight=Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent.Function Object.Light.LightComponent.Object.LightShafts 
 Light=Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent.Function Object.Light.LightComponent.Object.LightShafts 
@@ -743,6 +758,15 @@ SeqAct_PrepareMapChange=Object.SeqAct_PrepareMapChange Object.SequenceAction Obj
 SeqAct_ConsoleCommand=Object.SeqAct_ConsoleCommand.Commands Object.SequenceAction Object.SequenceObject 
 SpotLight=Object.Light.LightComponent.Object.SpotLightComponent Object.Light.LightComponent.Object.LightShafts Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent 
 SeqAct_ActorFactory=Object.SequenceAction Object.SequenceObject 
+WorldInfo=
+ZoneInfo=
+Info=
+FbxImportUI=Object.General Object.SkeletalMesh Object.StaticMesh Object.Materials 
+StaticMesh=
+StaticMeshActor=Object.StaticMeshActor Object.Movement.Location 
+StaticMeshActorBase=Object.StaticMeshActor Object.Movement.Location 
+InterpTrackMove=
+InterpTrack=
 
 [AnimSetViewer]
 LightDir=P=-8192 Y=-8192 R=0
@@ -767,4 +791,7 @@ CheckerboardCheckerPixelNum=16
 CheckerboardColorOne=(R=120,G=120,B=120,A=255)
 CheckerboardColorTwo=(R=60,G=60,B=60,A=255)
 SplitterPos=400
+
+[StaticMeshEditor]
+LightDir=P=-8192 Y=8192 R=0
 
