finished first level of level 2

--- a/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
@@ -97,12 +97,12 @@ Kismet_PosSizeMinimized=False
 Kismet_PosSize=68,0,1040,768
 ActorFloatingPropertyWindowMaximized=False
 ActorFloatingPropertyWindowMinimized=False
-ActorFloatingPropertyWindow=189,44,899,665
+ActorFloatingPropertyWindow=154,444,899,665
 DlgGenericStringEntryMaximized=False
 DlgGenericStringEntryMinimized=False
-MatineeMaximized=True
+MatineeMaximized=False
 MatineeMinimized=False
-Matinee=2169,-45,885,800
+Matinee=2311,-226,885,800
 AnimSetViewerMaximized=True
 AnimSetViewerMinimized=False
 AnimSetViewer=1375,127,1405,780
@@ -507,7 +507,7 @@ StartPage_Visible=True
 [UnrealEd]
 RecentAssets="             NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.Nomon_Golem_Large NomonAvatar.GolemAnims "
 None=======
-RecentAssets="                NomonAssets.Enemy NomonAssets.FloorMat NomonAssets.Black NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.GolemAnims NomonAvatar.Nomon_Golem_Large "
+RecentAssets="                 NomonAssets.Spikes_pCube3 NomonAssets.Enemy NomonAssets.FloorMat NomonAssets.Black NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.GolemAnims NomonAvatar.Nomon_Golem_Large "
 
 [ReferencedAssets]
 SplitterPos=200
@@ -602,8 +602,16 @@ FbxImportUISplitterPosProportionFavorites=0.286533
 FbxImportUISplitterPosProportion=0.501393
 StaticMeshSplitterPosProportion=0.500000
 StaticMeshSplitterPosProportionFavorites=0.344828
-InterpTrackMoveSplitterPosProportion=0.461004
-InterpTrackMoveSplitterPosProportionFavorites=0.466926
+InterpTrackMoveSplitterPosProportion=0.461361
+InterpTrackMoveSplitterPosProportionFavorites=0.466744
+SequenceFrameSplitterPosProportion=0.500000
+SequenceFrameSplitterPosProportionFavorites=0.500000
+SeqAct_AttachToActorSplitterPosProportion=0.500000
+SeqAct_AttachToActorSplitterPosProportionFavorites=0.500000
+SequenceOpSplitterPosProportion=0.500000
+SequenceOpSplitterPosProportionFavorites=0.500000
+InterpDataSplitterPosProportion=0.500000
+InterpDataSplitterPosProportionFavorites=0.500000
 
 [ContentBrowserUIState]
 FilterPanelHeight=200.000000
@@ -690,17 +698,17 @@ AnimTreeEditor=1
 StaticMeshEditor=2
 
 [PropertyWindowExpansion]
-SeqEvent_Touch=Object.SequenceObject 
-SequenceEvent=Object.SequenceObject 
-SequenceOp=Object.SeqAct_Interp Object.SequenceAction Object.SequenceObject 
+SeqEvent_Touch=Object.TouchTypes Object.SeqEvent_Touch Object.SequenceEvent Object.SequenceObject 
+SequenceEvent=Object.TouchTypes Object.SeqEvent_Touch Object.SequenceEvent Object.SequenceObject 
+SequenceOp=Object.SequenceObject 
 SequenceObject=Object.SequenceObject 
 Object=Object.SequenceObject 
-SeqAct_ModifyHealth=
+SeqAct_ModifyHealth=Object.SeqAct_ModifyHealth Object.SequenceAction Object.SequenceObject 
 SequenceAction=Object.SeqAct_Interp Object.SequenceAction Object.SequenceObject 
 SeqVar_Player=Object.SeqVar_Player Object.SequenceObject 
 SeqVar_Object=Object.SequenceObject 
 SequenceVariable=Object.SequenceObject 
-SeqEvent_LevelLoaded=Object.SequenceObject 
+SeqEvent_LevelLoaded=Object.SequenceEvent Object.SequenceObject 
 PlayerStart=Object.PlayerStart Object.NavigationPoint
 NavigationPoint=Object.PlayerStart Object.NavigationPoint
 SeqAct_Interp=Object.SeqAct_Interp Object.SequenceAction Object.SequenceObject 
@@ -767,6 +775,12 @@ StaticMeshActor=Object.StaticMeshActor Object.Movement.Location
 StaticMeshActorBase=Object.StaticMeshActor Object.Movement.Location 
 InterpTrackMove=
 InterpTrack=
+SequenceFrame=Object.SequenceObject 
+TriggerVolume=Object.Debug 
+Trigger=Object.Movement.Location 
+SeqAct_AttachToActor=Object.SequenceAction Object.SequenceObject 
+Actor=
+InterpData=Object.SequenceObject 
 
 [AnimSetViewer]
 LightDir=P=-8192 Y=-8192 R=0
