--- a/UDK-2011-08/UDKGame/Config/UDKEngine.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKEngine.ini
@@ -1284,3 +1284,11 @@ LastSurveyDate=20111118
 SurveysFailed=1
 SurveysAttempted=2
 
+[WinDrv.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
