--- a/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
@@ -37,8 +37,8 @@ DlgActorSearch=379,261,881,507
 DlgActorFactory=783,544,553,311,0
 DlgBuildProgress=760,475,406,200
 SurfaceProperties=647,11,545,757
-DockingContainer=507,94,798,768
-FloatingFrame_DockingContainer=507,94,798,768
+DockingContainer=490,2,798,768
+FloatingFrame_DockingContainer=490,2,798,768
 DlgGBSearch=953,568,400,300,0
 DlgSoundNodeWaveOptions=496,238,664,324,0
 DlgMove=760,475,497,408,0
@@ -135,6 +135,9 @@ DlgBrushBuilder=2070,378,356,333
 StaticMeshEditorMaximized=False
 StaticMeshEditorMinimized=False
 StaticMeshEditor=64,64,930,650
+ASVSocketMgrMaximized=False
+ASVSocketMgrMinimized=False
+ASVSocketMgr=100,100,640,300
 
 [EditorFrame]
 FrameClassName=WxEditorFrame
@@ -158,7 +161,7 @@ UseScriptDefinedOrder=True
 ShowAtStartup=True
 CurrentTip=38
 None=======
-CurrentTip=9
+CurrentTip=11
 
 [UnrealEd.MaterialEditorOptions]
 bShowGrid=True
@@ -507,7 +510,7 @@ StartPage_Visible=True
 [UnrealEd]
 RecentAssets="             NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.Nomon_Golem_Large NomonAvatar.GolemAnims "
 None=======
-RecentAssets="                 NomonAssets.Enemy NomonAssets.Spikes_pCube3 NomonAssets.FloorMat NomonAssets.Black NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.GolemAnims NomonAvatar.Nomon_Golem_Large "
+RecentAssets="                 NomonAvatar.Nomon_Golem_Large NomonAssets.Enemy NomonAssets.Spikes_pCube3 NomonAssets.FloorMat NomonAssets.Black NomonAvatar.Nomon_Golem_AnimTree NomonAvatar.Nomon_Golem Nomon.Mesh.Nomon_Golem NOM-LevelOne.WhiteMat NOM-LevelTest.Nomon_Golem A_Weapon_RocketLauncher.Cue.A_Weapon_RL_AltFireQueue1_Cue A_Weapon_RocketLauncher.WAV.A_Weapon_RL_Fire03 A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Impact_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_Fire_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_RocketLoaded_Cue A_Weapon_RocketLauncher.Cue.A_Weapon_RL_SeekLost_Cue NomonAvatar.GolemAnims "
 
 [ReferencedAssets]
 SplitterPos=200
@@ -612,6 +615,8 @@ SequenceOpSplitterPosProportion=0.500000
 SequenceOpSplitterPosProportionFavorites=0.500000
 InterpDataSplitterPosProportion=0.500000
 InterpDataSplitterPosProportionFavorites=0.500000
+SkeletalMeshSocketSplitterPosProportionFavorites=0.500000
+SkeletalMeshSocketSplitterPosProportion=0.500000
 
 [ContentBrowserUIState]
 FilterPanelHeight=200.000000
@@ -702,7 +707,7 @@ SeqEvent_Touch=Object.SequenceEvent Object.SequenceObject
 SequenceEvent=Object.SequenceEvent Object.SequenceObject
 SequenceOp=Object.SequenceEvent Object.SequenceObject
 SequenceObject=Object.SequenceEvent Object.SequenceObject
-Object=
+Object=Object.SkeletalMesh.Origin 
 SeqAct_ModifyHealth=Object.SeqAct_ModifyHealth Object.SequenceAction Object.SequenceObject
 SequenceAction=Object.SeqAct_Interp Object.SequenceAction Object.SequenceObject
 SeqVar_Player=Object.SeqVar_Player Object.SequenceObject
@@ -714,7 +719,7 @@ NavigationPoint=Object.PlayerStart Object.NavigationPoint
 SeqAct_Interp=Object.SeqAct_Interp Object.SequenceAction Object.SequenceObject
 SeqAct_Latent=Object.SeqAct_Interp Object.SequenceAction Object.SequenceObject
 InterpGroup=
-SkeletalMesh=Object.SkeletalMesh.Origin
+SkeletalMesh=Object.SkeletalMesh.Origin 
 InterpActor=Object.InterpActor Object.DynamicSMActor Object.Movement.Location
 DynamicSMActor=Object.InterpActor Object.DynamicSMActor Object.Movement.Location
 PointLightToggleable=Object.Light.LightComponent.Object.PointLightComponent.Translation Object.Light.LightComponent.Object.Lightmass Object.Light.LightComponent.Object.LightComponent
@@ -781,6 +786,7 @@ Trigger=Object.Movement.Location
 SeqAct_AttachToActor=Object.SequenceAction Object.SequenceObject
 Actor=
 InterpData=Object.SequenceObject
+SkeletalMeshSocket=
 
 [AnimSetViewer]
 LightDir=P=-8192 Y=-8192 R=0
